k8s/2.ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
  namespace: learning
spec:
  # deployment will take care of any pod matchingLabels app-ui
  selector:
    matchLabels:
      app: ui
  # pod template
  template:
    metadata:
      # required: define label for pod (used by higher k8s objects: Service, Deployment)
      labels:
        app: ui
    spec:
      containers:
        - name: ui-container
          image: nginx
          ports:
            # https://stackoverflow.com/a/65270688/2122990
            - name: ui-port
              containerPort: 80
