k8s/4.api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: learning
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api-container
          image: hello-api:latest
          # In Minikube, we usually build the image locally and don't push it.
          imagePullPolicy: Never
          ports:
            - containerPort: 80
