k8s/5.api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-api
  namespace: web
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
