k8s/6.ingress-resource.yaml
apiVersion: networking.k8s.io/v1
# Gateway doesn't use labels but Service **Name**
kind: Ingress
metadata:
  name: learning-ingress
  namespace: learning
spec:
  ingressClassName: nginx
  rules:
    - host: my-learning.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: svc-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-ui
                port:
                  number: 30123
